add enable previw option